# AdhocML

./: README.md  adhoc.ml  adhoc.sh  blog_jp.md  hMLInterpreter.cabal  test.ml  test.py  test.sh  z3.ml  z3.sh  z3tmp.py
app/: AdhocMain.hs  Main.hs  Z3Main.hs
src/: Adhoc.hs  Eval.hs  Parse.hs  Type.hs  Z3.hs
z3test/: z3test.py
