name:                hMLInterpreter
version:             0.1.0.0
synopsis:            ML interpreter and type checker
description:         ML interpreter and type checker
homepage:            https://github.com/githubuser/hMLInterpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Parse, Eval, Type
  build-depends:       base >= 4.7 && < 6
                     , parsec
                     , mtl
                     , haskeline
                     , parsec
                     , transformers
                     , containers
  default-language:    Haskell2010

executable hMLInterpreter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 6
                     , hMLInterpreter
                     , ghc-mod
  default-language:    Haskell2010

-- test-suite hMLInterpreter-test
--   type:                exitcode-stdio0.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , hMLInterpreter
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hMLInterpreter
